db model modif
