# api/controllers/ownerController.ts
@@ -21,23 +21,3 @@ export const getOwnerById = async (req: Request, res: Response) => {
     successMessage
   );
 };
-
-export const getOwnerByUserId = async (req: Request, res: Response) => {
-  const successMessage = 'Owner retrieved successfully';
-  handleResponse(
-    'ownerController',
-    res,
-    ownerService.getOwnerByUserId(req),
-    successMessage
-  );
-};
-
-export const updateOwner = (req: Request, res: Response) => {
-  const successMessage = 'Owner updated successfully';
-  handleResponse(
-    'ownerController',
-    res,
-    ownerService.updateOwner(req),
-    successMessage
-  );
-};
