# api/database/models/userModel.ts
@@ -1,47 +1,70 @@
 import mongoose, { Schema, Document, Types } from 'mongoose';
 
-type roles = 'sitter' | 'owner';
+type Roles = 'sitter' | 'owner';
+type Pets = 'cat' | 'dog' | 'nac';
 export interface I_User {
   email: string;
   password: string;
-}
-
-export interface I_UserDocument extends Document, I_User {
-  id: Types.ObjectId;
-  email: string;
-  roles: roles[];
-}
-
-export interface I_UserCreate extends I_User {
-  email: string;
-  password: string;
-  roles: roles;
-  profilePicture: string;
+  roles: Roles[];
+  profilePicture?: string;
   firstName: string;
   lastName: string;
   city: string;
   country: string;
-  tel?: string; // sitter profile
-  acceptedPets?: string | string[]; // sitter profile
-  presentation?: string; // sitter profile
-  pets?: string | string[]; // owner profile
-  userId: Types.ObjectId;
+  roleDetails: {
+    sitter?: {
+      tel?: string;
+      presentation?: string;
+      acceptedPets?: Pets[];
+    };
+    owner?: {
+      pets?: Pets[];
+    };
+  };
 }
 
-export interface I_UserUpdate {
-  email?: string;
-  password?: string;
+export interface I_UserDocument extends Document, I_User {
+  id: Types.ObjectId;
 }
 
-const userSchema = new Schema<I_UserDocument>({
+export interface I_UserCreate {
+  email: string;
+  password: string;
+  roles: string;
+  profilePicture?: string;
+  firstName: string;
+  lastName: string;
+  city: string;
+  country: string;
+  tel?: string;
+  presentation?: string;
+  acceptedPets?: string;
+  pets?: string;
+}
+
+const UserSchema = new Schema({
   email: { type: String, required: true, unique: true },
   password: { type: String, required: true },
-  roles: { type: [String], required: true },
-  // profileId: { type: Schema.Types.ObjectId, ref: 'Profile' },
+  roles: { type: [String], enum: ['sitter', 'owner'], required: true },
+  profilePicture: { type: String },
+  firstName: { type: String, required: true },
+  lastName: { type: String, required: true },
+  city: { type: String, required: true },
+  country: { type: String, required: true },
+  roleDetails: {
+    sitter: {
+      tel: { type: String },
+      presentation: { type: String },
+      acceptedPets: { type: [String], enum: ['cat', 'dog', 'nac'] },
+    },
+    owner: {
+      pets: { type: [String] },
+    },
+  },
 });
 
 // Hide password when converting to JSON
-userSchema.set('toJSON', {
+UserSchema.set('toJSON', {
   transform: (doc, ret) => {
     ret.id = ret._id;
     delete ret._id;
@@ -50,4 +73,4 @@ userSchema.set('toJSON', {
   },
 });
 
-export const UserModel = mongoose.model<I_UserDocument>('User', userSchema);
+export const UserModel = mongoose.model<I_UserDocument>('User', UserSchema);
