# api/routes/sitterRoutes.ts
@@ -1,21 +1,9 @@
 import { Router } from 'express';
 import * as sitterController from '../controllers/sitterController';
-import { validateToken } from '../middleware/tokenValidation';
-import { upload, handleError } from '../middleware/uploadMiddleware';
 
 const sitterRouter = Router();
 
-sitterRouter.route('/user/:userId').get(sitterController.getSitterByUserId);
-
-sitterRouter
-  .route('/:id')
-  .get(sitterController.getSitterById)
-  .patch(
-    validateToken,
-    upload.single('profilePicture'),
-    sitterController.updateSitter,
-    handleError
-  );
+sitterRouter.get('/:id', sitterController.getSitterById);
 
 sitterRouter.get('', sitterController.getAllSitters);
 
